CHROMIUM: config: Enable KEXEC_FILE
KEXEC_FILE in combination with SECURITY_LOADPIN_ENFORCE only allows
kernel images from the same filesystem as the kernel modules.

We also use it in combination with kexec limits, to make sure that the
syscall cannot be used by the user once they login.

$ echo CONFIG_KEXEC_FILE=y >> chromeos/config/chromeos/base.config
$ chromeos/scripts/kernelconfig olddefconfig

BUG=b:248248661
TEST=emerge-hatch sys-kernel/chromeos-kernel-5_15

Cq-Depend: chromium:4894179
Signed-off-by: Ricardo Ribalda <ribalda@chromium.org>
Change-Id: If2d4f71fbea216e5495dae369aab54e9fdf79cad
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/3918592
Reviewed-by: Ross Zwisler <zwisler@google.com>
Reviewed-by: Tzung-Bi Shih <tzungbi@chromium.org>
Reviewed-by: Jorge Lucangeli Obes <jorgelo@chromium.org>

--- a/chromeos/config/chromeos/arm64/common.config
+++ b/chromeos/config/chromeos/arm64/common.config
@@ -62,6 +62,7 @@ CONFIG_IIO_CROS_EC_LIGHT_PROX=m
 CONFIG_IIO_CROS_EC_SENSORS=m
 CONFIG_IIO_CROS_EC_SENSORS_SYNC=m
 CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_KEXEC_FILE=y
 # CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KFENCE=y
