--- a/chromeos/config/chromeos/x86_64/common.config
+++ b/chromeos/config/chromeos/x86_64/common.config
@@ -76,6 +76,7 @@ CONFIG_INTEL_RAPL=y
 CONFIG_INTEL_VBTN=m
 CONFIG_IO_DELAY_0XED=y
 CONFIG_JME=m
+CONFIG_KEXEC_FILE=y
 CONFIG_KFENCE=y
 CONFIG_KFENCE_SAMPLE_INTERVAL=500
 CONFIG_LEGACY_VSYSCALL_EMULATE=y
