--- a/chromeos/config/kdump/base.config
+++ b/chromeos/config/kdump/base.config
@@ -96,6 +96,7 @@ CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_CPU_IDLE_GOV_TEO=y
+CONFIG_CRASH_DUMP=y
 CONFIG_CRC7=m
 CONFIG_CROS_EC=y
 CONFIG_CROS_EC_I2C=y
