--- a/chromeos/config/chromeos/x86_64/common.config
+++ b/chromeos/config/chromeos/x86_64/common.config
@@ -136,6 +136,7 @@ CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_USB_GADGET=m
 CONFIG_USB_STORAGE_REALTEK=y
 CONFIG_USB_UHCI_HCD=y
+CONFIG_USB_XHCI_DBGCAP=y
 CONFIG_USB_XHCI_HCD=y
 # CONFIG_USELIB is not set
 # CONFIG_VGA_ARB is not set
