--- a/arch/arm64/boot/dts/qcom/sc7180-trogdor-lazor-r10-kb.dts
+++ b/arch/arm64/boot/dts/qcom/sc7180-trogdor-lazor-r10-kb.dts
@@ -2,7 +2,7 @@
 /*
  * Google Lazor board device tree source
  *
- * Copyright 2021 Google LLC.
+ * Copyright 2023 Google LLC.
  */
 
 /dts-v1/;
@@ -10,15 +10,12 @@
 #include "sc7180-trogdor.dtsi"
 #include "sc7180-trogdor-parade-ps8640.dtsi"
 #include "sc7180-trogdor-lazor.dtsi"
-#include "sc7180-trogdor-lte-sku.dtsi"
+#include "sc7180-lite.dtsi"
+#include "sc7180-trogdor-rt5682s-sku.dtsi"
 
 / {
-	model = "Google Lazor (rev9) with LTE";
-	compatible = "google,lazor-rev9-sku0", "google,lazor-rev9-sku10", "qcom,sc7180";
-};
-
-&ap_sar_sensor_i2c {
-	status = "okay";
+	model = "Google Lazor (rev10+) with KB Backlight";
+	compatible = "google,lazor-sku2", "qcom,sc7180";
 };
 
 &keyboard_backlight {
