--- a/chromeos/config/chromeos/x86_64/common.config
+++ b/chromeos/config/chromeos/x86_64/common.config
@@ -3,6 +3,7 @@
 #
 CONFIG_ACPI_ALS=m
 CONFIG_ACPI_APEI=y
+CONFIG_ACPI_CHROMEOS=y
 CONFIG_ACPI_DOCK=y
 CONFIG_ALT_SYSCALL=y
 CONFIG_ALT_SYSCALL_CHROMIUMOS=y
@@ -21,7 +22,6 @@ CONFIG_BRCMFMAC_USB=y
 CONFIG_BT_ATH3K=m
 CONFIG_BT_HCIBCM203X=m
 CONFIG_CHARGER_CROS_USBPD=y
-CONFIG_CHROMEOS_ACPI=y
 CONFIG_CHROMEOS_LAPTOP=y
 CONFIG_CHROMEOS_PSTORE=y
 CONFIG_CHROMEOS_TBMC=y
@@ -94,7 +94,6 @@ CONFIG_MOUSE_APPLETOUCH=m
 # CONFIG_MOUSE_PS2_LOGIPS2PP is not set
 # CONFIG_MTRR_SANITIZER is not set
 CONFIG_MWIFIEX_PCIE=m
-CONFIG_NVRAM=y
 CONFIG_PCI=y
 CONFIG_PCIEAER=y
 CONFIG_PCIEPORTBUS=y
