CHROMIUM: Enable CONFIG_EROFS_FS
BUG=b:300152248
TEST=CQ

Cq-Depend: chromium:4861424
Change-Id: I9c3b127ebc43e00f351a2ee42c5be939766b20ac
Signed-off-by: Jae Hoon Kim <kimjae@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4860834
Reviewed-by: Daniil Lunev <dlunev@chromium.org>

--- a/chromeos/config/chromeos/base.config
+++ b/chromeos/config/chromeos/base.config
@@ -101,6 +101,7 @@ CONFIG_DRM_UDL=y
 CONFIG_ECRYPT_FS=y
 CONFIG_EMBEDDED=y
 CONFIG_ENCRYPTED_KEYS=y
+CONFIG_EROFS_FS=m
 CONFIG_ESD_FS=y
 CONFIG_EXFAT_FS=m
 CONFIG_EXT4_FS=y
