CHROMINUM: arm63: dts: mt8186: Add default compatible to sku0
The default SKUID=0x7fffffff should be configured the same as sku0.
So they share the same dts.

BUG=b:293664305
TEST=emerge-corsola sys-kernel/chromeos-kernel-5_15

Change-Id: Ibf11cd231a329a70e0cce074929982673cb80bc3
Signed-off-by: cengjianeng <cengjianeng@huaqin.corp-partner.google.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4861266
Reviewed-by: Xuxin Xiong <xuxinxiong@huaqin.corp-partner.google.com>
Commit-Queue: Hsin-Yi Wang <hsinyi@chromium.org>
Reviewed-by: Shawn Ku <shawnku@chromium.org>
Reviewed-by: Hsin-Yi Wang <hsinyi@chromium.org>

--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-ponyta-sku0.dts
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-ponyta-sku0.dts
@@ -7,8 +7,9 @@
 #include "mt8186-corsola-ponyta.dtsi"
 
 / {
-	model = "Google Ponyta sku0 board";
-	compatible = "google,ponyta-sku0", "google,ponyta", "mediatek,mt8186";
+	model = "Google Ponyta sku0/unprovisioned board";
+	compatible = "google,ponyta-sku0", "google,ponyta-sku2147483647",
+		     "google,ponyta", "mediatek,mt8186";
 };
 
 &i2c2 {
