CHROMIUM: arm64: dts: mt8186: Delete cros-ec keyboard
Delete cros-ec keyboard node and choose hammerd compatible.

BUG=b:301335711
UPSTREAM-TASK=b:213000788
TEST=emerge-staryu sys-kernel/chromeos-kernel-5_15

Change-Id: I07b268806a4981e4729a48c83bb0af9c7be85dd5
Signed-off-by: Cong Yang <yangcong5@huaqin.corp-partner.google.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4881320
Reviewed-by: Hsin-Yi Wang <hsinyi@chromium.org>
Reviewed-by: Ruihai Zhou <zhouruihai@huaqin.corp-partner.google.com>

--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-starmie.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-starmie.dtsi
@@ -8,6 +8,7 @@
 #include "mt8186-corsola-it6505.dtsi"
 
 /delete-node/ &dsi_out;
+/delete-node/ &keyboard_controller;
 
 / {
 	en_pp6000_mipi_disp_150ma: en-pp6000-mipi-disp-150ma {
@@ -101,6 +102,10 @@
 &cros_ec {
 	cbas {
 		compatible = "google,cros-cbas";
+	};
+
+	keyboard-controller {
+		compatible = "google,cros-ec-keyb-switches";
 	};
 };
 
