--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-steelix.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-steelix.dtsi
@@ -87,7 +87,7 @@
 
 		aux-bus {
 			panel: panel {
-				compatible = "auo,b116xw03";
+				compatible = "edp-panel";
 				power-supply = <&pp3300_disp_x>;
 				backlight = <&backlight_lcd0>;
 
