CHROMIUM: config: Enable zstd in crypyo API
Enable zstd potential zram primary compression algorithm.

BUG=b:301506643
TEST=check if /proc/crypto contains zstd on betty VM

Signed-off-by: Chun-Tse Shao <ctshao@google.com>
Change-Id: Ib370e2f1571821df2e66b52d36c7589b154a6639
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4892303
Reviewed-by: Brian Norris <briannorris@chromium.org>
Commit-Queue: Brian Norris <briannorris@chromium.org>

--- a/chromeos/config/chromeos/base.config
+++ b/chromeos/config/chromeos/base.config
@@ -70,6 +70,7 @@ CONFIG_CRYPTO_DES=y
 CONFIG_CRYPTO_LZO=m
 CONFIG_CRYPTO_USER_API_HASH=m
 CONFIG_CRYPTO_USER_API_SKCIPHER=m
+CONFIG_CRYPTO_ZSTD=m
 CONFIG_DAX=y
 CONFIG_DEBUG_ATOMIC_SLEEP=y
 CONFIG_DEBUG_CREDENTIALS=y
