--- a/chromeos/config/chromeos/base.config
+++ b/chromeos/config/chromeos/base.config
@@ -76,6 +76,7 @@ CONFIG_DEBUG_ATOMIC_SLEEP=y
 CONFIG_DEBUG_CREDENTIALS=y
 CONFIG_DEBUG_DEVRES=y
 CONFIG_DEBUG_INFO=y
+CONFIG_DEBUG_INFO_BTF=y
 CONFIG_DEBUG_INFO_DWARF5=y
 CONFIG_DEBUG_LIST=y
 CONFIG_DEBUG_SPINLOCK=y
