CHROMIUM: config: Disable sc7280 configs on qualcomm
We don't need to keep sc7280 specific configs enabled in the qualcomm
configuration. Remove the configs to have a smaller kernel image.

BUG=b:303690618
TEST=tast run $trogdor_dut kernel.Bloat # shows less unused drivers

Change-Id: Ieb6468dae50d36c5c2e8afa970c148c05577ec02
Signed-off-by: Stephen Boyd <swboyd@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4919845
Reviewed-by: Douglas Anderson <dianders@chromium.org>

--- a/chromeos/config/chromeos/arm64/chromiumos-arm64-vm.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-arm64-vm.flavour.config
@@ -19,8 +19,10 @@ CONFIG_GPIOLIB=y
 CONFIG_GVE=m
 CONFIG_HW_RANDOM_VIRTIO=y
 CONFIG_MEDIA_TEST_SUPPORT=y
+CONFIG_PCI=y
 CONFIG_PCIEAER=y
 CONFIG_PCIEASPM_POWER_SUPERSAVE=y
+CONFIG_PCIEPORTBUS=y
 CONFIG_PCI_HOST_GENERIC=y
 CONFIG_PROC_KCORE=y
 CONFIG_REGULATOR=y
