--- a/chromeos/config/chromeos/arm64/chromiumos-arm64.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-arm64.flavour.config
@@ -112,8 +112,10 @@ CONFIG_MTK_IOMMU=y
 CONFIG_MTK_PMIC_WRAP=y
 CONFIG_MWIFIEX_PCIE=m
 CONFIG_MWIFIEX_SDIO=m
+CONFIG_PCI=y
 CONFIG_PCIEAER=y
 CONFIG_PCIEASPM_POWER_SUPERSAVE=y
+CONFIG_PCIEPORTBUS=y
 CONFIG_PCIE_MEDIATEK=y
 CONFIG_PCIE_QCOM=y
 CONFIG_PCIE_ROCKCHIP_HOST=y
