--- a/chromeos/config/chromeos/arm64/chromiumos-mediatek.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-mediatek.flavour.config
@@ -60,8 +60,10 @@ CONFIG_MTK_SOC_THERMAL_LVTS=y
 CONFIG_MTK_SVS=y
 CONFIG_MTK_THERMAL=y
 CONFIG_MWIFIEX_SDIO=m
+CONFIG_PCI=y
 CONFIG_PCIEAER=y
 CONFIG_PCIEASPM_POWER_SUPERSAVE=y
+CONFIG_PCIEPORTBUS=y
 CONFIG_PCIE_MEDIATEK=y
 CONFIG_PHY_MTK_TPHY=y
 # CONFIG_PINCTRL_MT2712 is not set
