--- a/chromeos/config/chromeos/arm64/chromiumos-qualcomm.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-qualcomm.flavour.config
@@ -11,13 +11,7 @@ CONFIG_ARCH_QCOM=y
 CONFIG_ARM_QCOM_CPUFREQ_HW=y
 CONFIG_ARM_SMMU=y
 CONFIG_ATH10K_SNOC=m
-CONFIG_ATH11K=m
-CONFIG_ATH11K_AHB=m
-CONFIG_ATH11K_DEBUG=y
-CONFIG_ATH11K_DEBUGFS=y
-CONFIG_ATH11K_TRACING=y
 CONFIG_BACKLIGHT_GPIO=y
-CONFIG_BLK_DEV_NVME=y
 CONFIG_BT_HCIUART_QCA=y
 # CONFIG_CAVIUM_ERRATUM_22375 is not set
 # CONFIG_CAVIUM_ERRATUM_23154 is not set
@@ -30,6 +24,7 @@ CONFIG_CPU_IDLE=y
 CONFIG_CROS_EC_MKBP_PROXIMITY=m
 CONFIG_CROS_EC_TYPEC=m
 CONFIG_CRYPTO_MICHAEL_MIC=y
+CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
 CONFIG_DEVFREQ_THERMAL=y
 CONFIG_DRM_MSM=y
 # CONFIG_DRM_MSM_DSI_14NM_PHY is not set
@@ -61,29 +56,20 @@ CONFIG_INTERCONNECT=y
 CONFIG_INTERCONNECT_QCOM=y
 CONFIG_INTERCONNECT_QCOM_OSM_L3=y
 CONFIG_INTERCONNECT_QCOM_SC7180=y
-CONFIG_INTERCONNECT_QCOM_SC7280=y
 CONFIG_LEDS_CLASS_MULTICOLOR=y
 CONFIG_LEDS_PWM=y
-CONFIG_LEDS_QCOM_LPG=y
 CONFIG_MAILBOX=y
 CONFIG_MEMORY=y
 CONFIG_MFD_SPMI_PMIC=y
 CONFIG_MMC_SDHCI_MSM=y
-CONFIG_PCIEASPM_POWER_SUPERSAVE=y
-CONFIG_PCIE_QCOM=y
-CONFIG_PHY_QCOM_EDP=y
 CONFIG_PHY_QCOM_QMP=y
-# CONFIG_PHY_QCOM_QMP_PCIE_8996 is not set
 # CONFIG_PHY_QCOM_QMP_UFS is not set
 # CONFIG_PHY_QCOM_QMP_USB is not set
 CONFIG_PHY_QCOM_QUSB2=y
-CONFIG_PHY_QCOM_USB_SNPS_FEMTO_V2=y
-CONFIG_PINCTRL_LPASS_LPI=y
 CONFIG_PINCTRL_MSM=y
 CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_PINCTRL_SC7180=y
-CONFIG_PINCTRL_SC7280=y
-CONFIG_PINCTRL_SC7280_LPASS_LPI=y
+CONFIG_PM_DEVFREQ=y
 CONFIG_PM_DEVFREQ_EVENT=y
 CONFIG_PROC_KCORE=y
 # CONFIG_PTP_1588_CLOCK is not set
@@ -94,10 +80,8 @@ CONFIG_QCOM_COMMAND_DB=y
 # CONFIG_QCOM_EBI2 is not set
 CONFIG_QCOM_GENI_SE=y
 CONFIG_QCOM_IPA=y
-CONFIG_QCOM_IPCC=y
 CONFIG_QCOM_LLCC=y
 CONFIG_QCOM_PDC=y
-CONFIG_QCOM_Q6V5_ADSP=y
 CONFIG_QCOM_Q6V5_MSS=y
 CONFIG_QCOM_QFPROM=y
 CONFIG_QCOM_RMTFS_MEM=y
@@ -128,44 +112,29 @@ CONFIG_RPMSG_CHAR=y
 CONFIG_RPMSG_QCOM_GLINK_SMEM=y
 CONFIG_RPMSG_QCOM_SMD=y
 CONFIG_SCSI=y
-CONFIG_SCSI_UFSHCD=y
-CONFIG_SCSI_UFSHCD_PLATFORM=y
-CONFIG_SCSI_UFS_QCOM=y
 CONFIG_SC_CAMCC_7180=y
-CONFIG_SC_CAMCC_7280=y
 CONFIG_SC_DISPCC_7180=y
-CONFIG_SC_DISPCC_7280=y
 CONFIG_SC_GPUCC_7180=y
-CONFIG_SC_GPUCC_7280=y
-CONFIG_SC_LPASSCC_7280=y
 CONFIG_SC_LPASS_CORECC_7180=y
-CONFIG_SC_LPASS_CORECC_7280=y
 CONFIG_SC_MSS_7180=m
 CONFIG_SC_VIDEOCC_7180=y
-CONFIG_SC_VIDEOCC_7280=y
 CONFIG_SECURITY_LOADPIN_VERITY=y
 CONFIG_SERIAL_DEV_BUS=y
 CONFIG_SERIAL_QCOM_GENI=y
 CONFIG_SERIAL_QCOM_GENI_CONSOLE=y
 CONFIG_SND_DYNAMIC_MINORS=y
-CONFIG_SND_SOC_LPASS_VA_MACRO=y
 CONFIG_SND_SOC_QCOM=y
 CONFIG_SND_SOC_SC7180=m
-CONFIG_SND_SOC_SC7280=y
-CONFIG_SOUNDWIRE=y
-CONFIG_SOUNDWIRE_QCOM=y
 CONFIG_SPECTRA_CAMERA=y
 CONFIG_SPI_QCOM_GENI=y
 CONFIG_SPI_QCOM_QSPI=y
 CONFIG_SPMI=y
 CONFIG_SX9310=m
 CONFIG_SX9324=m
-CONFIG_TCG_TIS_I2C_CR50=y
 CONFIG_THERMAL=y
 CONFIG_TYPEC=y
 CONFIG_UID_SYS_STATS=y
 # CONFIG_USB_DWC3_OF_SIMPLE is not set
 CONFIG_USB_ONBOARD_HUB=y
-# CONFIG_USB_PCI is not set
 CONFIG_VIDEO_QCOM_VENUS=m
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
