CHROMIUM: config: Don't enable cros_ec extcon on qualcomm
We don't use the extcon code at all on qualcomm chromebooks. Remove
extcon from the config.

BUG=None
TEST=tast run $trogdor_dut kernel.Bloat # Don't see extcon driver

Change-Id: Iac8a625f3f8ffb93a07f3292782ec45a7eaa194f
Signed-off-by: Stephen Boyd <swboyd@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4924020
Reviewed-by: Douglas Anderson <dianders@chromium.org>

--- a/chromeos/config/chromeos/arm64/chromiumos-arm64-vm.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-arm64-vm.flavour.config
@@ -15,6 +15,7 @@ CONFIG_DEVFREQ_THERMAL=y
 CONFIG_DRM_VIRTIO_GPU=y
 # CONFIG_EFIVAR_FS is not set
 CONFIG_EXTCON=y
+CONFIG_EXTCON_USBC_CROS_EC=y
 CONFIG_GPIOLIB=y
 CONFIG_GVE=m
 CONFIG_HW_RANDOM_VIRTIO=y
