--- a/chromeos/config/chromeos/arm64/chromiumos-qualcomm.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-qualcomm.flavour.config
@@ -43,7 +43,6 @@ CONFIG_EDAC=y
 # CONFIG_EDAC_LEGACY_SYSFS is not set
 CONFIG_EDAC_QCOM=y
 # CONFIG_EFI is not set
-CONFIG_EXTCON=y
 CONFIG_HID_GOOGLE_HAMMER=m
 CONFIG_HWSPINLOCK=y
 CONFIG_HWSPINLOCK_QCOM=y
@@ -136,5 +135,6 @@ CONFIG_TYPEC=y
 CONFIG_UID_SYS_STATS=y
 # CONFIG_USB_DWC3_OF_SIMPLE is not set
 CONFIG_USB_ONBOARD_HUB=y
+CONFIG_USB_ROLE_SWITCH=y
 CONFIG_VIDEO_QCOM_VENUS=m
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
