--- a/chromeos/config/chromeos/arm64/chromiumos-arm64.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-arm64.flavour.config
@@ -67,6 +67,7 @@ CONFIG_EEPROM_AT24=y
 # CONFIG_EFIVAR_FS is not set
 CONFIG_EFI_GENERIC_STUB_INITRD_CMDLINE_LOADER=y
 CONFIG_EXTCON_PALMAS=y
+CONFIG_EXTCON_USBC_CROS_EC=y
 CONFIG_GENERIC_ADC_THERMAL=y
 CONFIG_GPIO_PALMAS=y
 CONFIG_HID_GOOGLE_HAMMER=m
