CHROMIUM: arm64: dts: mt8186: Add Unprovisioned SKU
Coreboot tune LCM voltage table, add unprovisioned sku2147483638
/sku2147483641.

BUG=b:300418909
UPSTREAM-TASK=b:213000788
TEST=emerge-staryu sys-kernel/chromeos-kernel-5_15

Cq-Depend: chrome-internal:6536335
Change-Id: I3ce35c336fa55f640bd9249b5e83df4b57a0ecfe
Signed-off-by: Cong Yang <yangcong5@huaqin.corp-partner.google.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4918018
Commit-Queue: Knox Chiou <knoxchiou@chromium.org>
Reviewed-by: Knox Chiou <knoxchiou@chromium.org>

--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-starmie-sku0.dts
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-starmie-sku0.dts
@@ -6,6 +6,10 @@
  * Unprovisioned SKU: 0x7FFFFFF0UL | 0x08
  * Panel ID: 0x3 (K&D-Ili9882t)
  * Unprovisioned SKU: 0x7FFFFFF0UL | 0x03
+ * Panel ID: 0x6 (K&D-Ili9882t)
+ * Unprovisioned SKU: 0x7FFFFFF0UL | 0x06
+ * Panel ID: 0x9 (Starry-Ilitek9882t)
+ * Unprovisioned SKU: 0x7FFFFFF0UL | 0x09
  */
 
 /dts-v1/;
@@ -15,7 +19,8 @@
 	model = "Google Starmie sku0/unprovisioned board";
 	compatible = "google,starmie-sku0", "google,starmie-sku2147483640",
 		     "google,starmie-sku2", "google,starmie-sku2147483635",
-		     "google,starmie-sku3", "google,starmie", "mediatek,mt8186";
+		     "google,starmie-sku3", "google,starmie-sku2147483638",
+		     "google,starmie-sku2147483641","google,starmie", "mediatek,mt8186";
 };
 
 &panel {
