CHROMIUM: config: Disable CONFIG_GADGET on qualcomm
We don't support gadget mode on Qualcomm chromebooks, so disable the
config here to save some space.

BUG=None
TEST=tast run $trogdor_dut kernel.Bloat

Change-Id: Ia91ccfdc4dcafe9acab4a192cd694fe2ea9d15fd
Signed-off-by: Stephen Boyd <swboyd@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4924021
Reviewed-by: Douglas Anderson <dianders@chromium.org>

--- a/chromeos/config/chromeos/arm64/chromiumos-arm64.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-arm64.flavour.config
@@ -283,6 +283,11 @@ CONFIG_THERMAL=y
 CONFIG_TOUCHSCREEN_MELFAS_MIP4=y
 CONFIG_TYPEC=m
 CONFIG_UID_SYS_STATS=y
+CONFIG_USB_CONFIGFS=m
+CONFIG_USB_CONFIGFS_F_FS=y
+CONFIG_USB_DUMMY_HCD=m
+CONFIG_USB_GADGET=y
+CONFIG_USB_MASS_STORAGE=m
 CONFIG_USB_MTU3=y
 CONFIG_USB_MTU3_HOST=y
 CONFIG_USB_ONBOARD_HUB=y
