--- a/chromeos/config/chromeos/armel/common.config
+++ b/chromeos/config/chromeos/armel/common.config
@@ -129,8 +129,12 @@ CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_TMPFS=y
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_TASK_GROUP=y
+CONFIG_USB_CONFIGFS=m
+CONFIG_USB_CONFIGFS_F_FS=y
+CONFIG_USB_DUMMY_HCD=m
 CONFIG_USB_DWC2=y
 CONFIG_USB_EHCI_HCD_PLATFORM=y
+CONFIG_USB_MASS_STORAGE=m
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VFP=y
 CONFIG_VIDEO_HANTRO=y
