--- a/chromeos/config/chromeos/x86_64/common.config
+++ b/chromeos/config/chromeos/x86_64/common.config
@@ -131,10 +131,14 @@ CONFIG_TOUCHSCREEN_WDT87XX_I2C=y
 CONFIG_TYPEC=m
 CONFIG_TYPEC_UCSI=m
 CONFIG_UCSI_ACPI=m
+CONFIG_USB_CONFIGFS=m
+CONFIG_USB_CONFIGFS_F_FS=y
+CONFIG_USB_DUMMY_HCD=m
 CONFIG_USB_DWC3=m
 CONFIG_USB_DWC3_GADGET=y
 CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_USB_GADGET=m
+CONFIG_USB_MASS_STORAGE=m
 CONFIG_USB_STORAGE_REALTEK=y
 CONFIG_USB_UHCI_HCD=y
 CONFIG_USB_XHCI_DBGCAP=y
