--- a/chromeos/config/chromeos/arm64/chromiumos-arm64.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-arm64.flavour.config
@@ -177,6 +177,7 @@ CONFIG_QRTR=y
 CONFIG_QRTR_SMD=y
 CONFIG_REGULATOR_CROS_EC=y
 CONFIG_REGULATOR_DA9211=y
+CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_MAX8973=y
 CONFIG_REGULATOR_MT6311=y
 CONFIG_REGULATOR_MT6358=y
