CHROMIUM: config: Only enable pwm regulator on Rockchip
We don't use the pwm regulator anywhere besides on Rockchip devices.
Only enable the driver there to save some space on non-rockchip builds.

BUG=None
TEST=tast run $dut kernel.Bloat

Change-Id: I9d71c02626fe0628d57fc0ca8c1f5765e7e30153
Signed-off-by: Stephen Boyd <swboyd@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4924342
Reviewed-by: Douglas Anderson <dianders@chromium.org>

--- a/chromeos/config/chromeos/arm64/chromiumos-arm64.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-arm64.flavour.config
@@ -183,6 +183,7 @@ CONFIG_REGULATOR_MT6311=y
 CONFIG_REGULATOR_MT6358=y
 CONFIG_REGULATOR_MT6397=y
 CONFIG_REGULATOR_PALMAS=y
+CONFIG_REGULATOR_PWM=y
 CONFIG_REGULATOR_QCOM_RPMH=y
 CONFIG_REGULATOR_RK808=y
 CONFIG_REGULATOR_TPS51632=y
