--- a/chromeos/config/chromeos/arm64/chromiumos-rockchip64.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-rockchip64.flavour.config
@@ -59,6 +59,7 @@ CONFIG_PTP_1588_CLOCK=m
 CONFIG_PWM_ROCKCHIP=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_GPIO=y
+CONFIG_REGULATOR_PWM=y
 CONFIG_REGULATOR_RK808=y
 CONFIG_REGULATOR_VCTRL=y
 CONFIG_ROCKCHIP_ANALOGIX_DP=y
