CHROMIUM: config: Inline USE=kvm_host
Essentially every CrOS system enables this already [1], and those that
don't are less interested in tweaking the kernel configuration than they
are interested in limiting user space components, or else they already
have their own kernel configuration (e.g., chromeos/config/termina/...).

Per the cros-kernel.eclass comments, it's vastly preferred to perform
Kconfig management in these config files, rather than in configuration
fragments in the eclass.

[1] cros query boards -f '"kvm_host" not in use_flags'

Generated via:

  if [ -e chromeos/config/base.config ]; then
    BASE=chromeos/config/base.config
    INTEL=( chromeos/config/x86_64/chromeos-intel-* )
  else
    BASE=chromeos/config/chromeos/base.config
    INTEL=( chromeos/config/chromeos/x86_64/chromeos-intel-* )
  fi
  cat <<"EOF" >>"${BASE}"
  CONFIG_HAVE_KVM_CPU_RELAX_INTERCEPT=y
  CONFIG_HAVE_KVM_EVENTFD=y
  CONFIG_HAVE_KVM_IRQCHIP=y
  CONFIG_HAVE_KVM_IRQFD=y
  CONFIG_HAVE_KVM_IRQ_ROUTING=y
  CONFIG_HAVE_KVM_MSI=y
  CONFIG_KVM=y
  # CONFIG_KVM_MMU_AUDIT is not set
  # CONFIG_KVM_APIC_ARCHITECTURE is not set
  # CONFIG_KVM_ASYNC_PF is not set
  CONFIG_KVM_AMD=y
  CONFIG_KVM_INTEL=y
  CONFIG_KVM_MMIO=y
  CONFIG_VSOCKETS=y
  CONFIG_VSOCKETS_LOOPBACK=y
  CONFIG_VHOST_VSOCK=y
  CONFIG_VIRTUALIZATION=y
  CONFIG_KVM_ARM_HOST=y
  CONFIG_KVM_HETEROGENEOUS_RT=y
  EOF

  for intel in "${INTEL[@]}"; do
    echo CONFIG_KVM_AMD=n >> "$intel"
  done

  chromeos/scripts/kernelconfig olddefconfig

BUG=none
TEST=chromeos/scripts/kernelconfig checkconfig

Change-Id: Ieba3967241f226abe7c9e9f5497288fcb2c91f88
Signed-off-by: Brian Norris <briannorris@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4953718
Reviewed-by: Douglas Anderson <dianders@chromium.org>

--- a/chromeos/config/chromeos/base.config
+++ b/chromeos/config/chromeos/base.config
@@ -479,6 +479,8 @@ CONFIG_USERFAULTFD=y
 CONFIG_USER_NS=y
 CONFIG_VETH=m
 CONFIG_VFAT_FS=m
+CONFIG_VHOST_VSOCK=y
+CONFIG_VSOCKETS=y
 CONFIG_WATCHDOG=y
 CONFIG_WERROR=y
 CONFIG_WIREGUARD=m
