--- a/chromeos/config/chromeos/x86_64/chromeos-intel-denverton.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-intel-denverton.flavour.config
@@ -27,6 +27,7 @@ CONFIG_ITCO_VENDOR_SUPPORT=y
 CONFIG_ITCO_WDT=y
 CONFIG_IWL7000=m
 CONFIG_IXGBE=y
+CONFIG_KVM_INTEL=y
 CONFIG_MFD_INTEL_LPSS_ACPI=y
 CONFIG_MFD_INTEL_LPSS_PCI=y
 # CONFIG_MOUSE_PS2_ALPS is not set
