--- a/chromeos/config/chromeos/x86_64/chromeos-intel-pineview.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-intel-pineview.flavour.config
@@ -59,6 +59,7 @@ CONFIG_ITCO_VENDOR_SUPPORT=y
 CONFIG_ITCO_WDT=y
 CONFIG_IWL7000=m
 CONFIG_KEYBOARD_GPIO=y
+CONFIG_KVM_INTEL=y
 CONFIG_MFD_INTEL_LPSS_ACPI=y
 CONFIG_MFD_INTEL_LPSS_PCI=y
 CONFIG_MFD_INTEL_PMC_BXT=y
