--- a/chromeos/config/chromeos/arm64/common.config
+++ b/chromeos/config/chromeos/arm64/common.config
@@ -66,6 +66,7 @@ CONFIG_KEXEC_FILE=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KFENCE=y
 CONFIG_KFENCE_SAMPLE_INTERVAL=500
+CONFIG_KVM=y
 CONFIG_MAC80211_DEBUGFS=y
 CONFIG_MAC80211_LEDS=y
 CONFIG_MMC_SDHCI_PLTFM=y
@@ -105,6 +106,7 @@ CONFIG_USB_OHCI_HCD_PLATFORM=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_VIRTUALIZATION=y
 # CONFIG_XZ_DEC_ARM is not set
 # CONFIG_XZ_DEC_ARMTHUMB is not set
 # CONFIG_XZ_DEC_X86 is not set
