--- a/chromeos/config/chromeos/x86_64/chromeos-amd-stoneyridge.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-amd-stoneyridge.flavour.config
@@ -46,6 +46,7 @@ CONFIG_I2C_DESIGNWARE_AMDPSP=y
 CONFIG_IRQ_REMAP=y
 CONFIG_IWL7000=m
 CONFIG_KEYBOARD_GPIO=y
+CONFIG_KVM_AMD=y
 CONFIG_MAILBOX=y
 CONFIG_MHI_BUS=y
 CONFIG_MHI_BUS_DEBUG=y
