--- a/chromeos/config/chromeos/x86_64/chromiumos-x86_64.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromiumos-x86_64.flavour.config
@@ -37,6 +37,8 @@ CONFIG_INTEL_SCU_PLATFORM=y
 CONFIG_INTEL_SOC_DTS_THERMAL=y
 CONFIG_IWL7000=m
 CONFIG_KEYBOARD_GPIO=y
+CONFIG_KVM_AMD=y
+CONFIG_KVM_INTEL=y
 CONFIG_MFD_INTEL_LPSS_ACPI=y
 CONFIG_MFD_INTEL_LPSS_PCI=y
 CONFIG_MICROCODE_AMD=y
