CHROMIUM: config: Enable CONFIG_PARAVIRT_SCHED_KVM
To address the latency issues in VM because of the disconnected double
scheduling(host scheduler and guest scheduler), kvm and guest kernel is
modified to share scheduling information and dynamically boost/unboost
the priority of vcpu threads as needed. The feature is behind linux
kernel configs: CONFIG_PARAVIRT_SCHED_KVM/CONFIG_PARAVIRT_SCHED

Kernel changes for this feature:
https://chromium-review.googlesource.com/q/topic:%22vcpu_boost_6.1%22

Enable CONFIG_PARAVIRT_SCHED_KVM for x86

BUG=b:262267726
TEST=build and boot

Change-Id: I38f0b56a73fe33b5212824a79aadadc45e756313
Signed-off-by: Vineeth Pillai <vineethrp@google.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/5253701
Reviewed-by: Joel Fernandes <joelaf@google.com>

--- a/chromeos/config/chromeos/x86_64/common.config
+++ b/chromeos/config/chromeos/x86_64/common.config
@@ -98,6 +98,7 @@ CONFIG_MOUSE_CYAPA=y
 # CONFIG_MOUSE_PS2_LOGIPS2PP is not set
 # CONFIG_MTRR_SANITIZER is not set
 CONFIG_MWIFIEX_PCIE=m
+CONFIG_PARAVIRT_SCHED_KVM=y
 CONFIG_PCI=y
 CONFIG_PCIEAER=y
 CONFIG_PCIEPORTBUS=y
