CHROMIUM: config: Enable some USB gadget code on qualcomm
We need the dummy hcd driver and g_mass_storage enabled for some tast
tests. Enable the USB gadget core and dummy hcd driver on qualcomm
boards so these tests continue to pass.

BUG=b:307272272
TEST=tast run $trogdor_dut dlp.DataLeakPreventionRulesListFilesUSB.*
TEST=tast run $trogdor_dut arc.UsbAttachToArcvm.vm
TEST=tast run $trogdor_dut enterpriseconnectors.TestFileTransfer.scan*

Change-Id: I7913fdb892d5ca3feb91bcd37c40a5d6678c9f55
Signed-off-by: Stephen Boyd <swboyd@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4969053
Reviewed-by: Douglas Anderson <dianders@chromium.org>
Commit-Queue: Douglas Anderson <dianders@chromium.org>

--- a/chromeos/config/chromeos/arm64/chromiumos-qualcomm.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-qualcomm.flavour.config
@@ -134,6 +134,7 @@ CONFIG_THERMAL=y
 CONFIG_TYPEC=y
 CONFIG_UID_SYS_STATS=y
 # CONFIG_USB_DWC3_OF_SIMPLE is not set
+CONFIG_USB_GADGET=m
 CONFIG_USB_ONBOARD_HUB=y
 CONFIG_USB_ROLE_SWITCH=m
 CONFIG_VIDEO_QCOM_VENUS=m
