CHROMIUM: config: Enable KFENCE_DEFERRABLE
Use deferrable timers for kfence so that we can hit low power idle more
often.

BUG=b:307628499
TEST=Boot on DUT, see device go idle

Change-Id: Ide0601ef4efd3a4ea136dfc5fd6af421affdb97b
Signed-off-by: Stephen Boyd <swboyd@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4973434
Reviewed-by: Zubin Mithra <zsm@chromium.org>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>

--- a/chromeos/config/chromeos/arm64/common.config
+++ b/chromeos/config/chromeos/arm64/common.config
@@ -65,6 +65,7 @@ CONFIG_KEXEC_FILE=y
 # CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KFENCE=y
+CONFIG_KFENCE_DEFERRABLE=y
 CONFIG_KFENCE_SAMPLE_INTERVAL=500
 CONFIG_KVM=y
 CONFIG_MAC80211_DEBUGFS=y
