CHROMIUM: arm64: dts: mt8186: Add new sku for chinchou
Add sku with touchpanel and without stylus.

BUG=b:302210748
TEST=emerge-corsola sys-kernel/chromeos-kernel-5_15

Change-Id: I389d2175a50ce57f57a626633dcc52da51e65099
Signed-off-by: xiazhengqiao <xiazhengqiao@huaqin.corp-partner.google.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4997345
Reviewed-by: Haikun Zhou <zhouhaikun5@huaqin.corp-partner.google.com>
Reviewed-by: Hsin-Yi Wang <hsinyi@chromium.org>

--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou-sku1.dts
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou-sku1.dts
@@ -7,8 +7,8 @@
 #include "mt8186-corsola-chinchou.dtsi"
 
 / {
-	model = "Google chinchou sku16/sku2147483647 board";
-	compatible = "google,chinchou-sku16", "google,chinchou-sku2147483647",
+	model = "Google chinchou sku1/sku17 board";
+	compatible = "google,chinchou-sku1", "google,chinchou-sku17",
 			"mediatek,mt8186";
 };
 
@@ -25,4 +25,8 @@
 		hid-descr-addr = <0x0001>;
 		vdd-supply = <&pp3300_s3>;
 	};
+};
+
+&gpio_keys {
+	status = "disabled";
 };
