--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou.dtsi
@@ -196,6 +196,8 @@
 };
 
 &keyboard_controller {
+	keypad,num-columns = <15>;
+
 	linux,keymap = <
 		CROS_STD_MAIN_KEYMAP
 		MATRIX_KEY(0x00, 0x02, KEY_BACK)           /* T1 */
@@ -216,8 +218,8 @@
 		MATRIX_KEY(0x06, 0x00, KEY_INSERT)         /* Insert */
 		MATRIX_KEY(0x01, 0x0e, KEY_LEFTCTRL)	   /* Left Control*/
 		MATRIX_KEY(0x04, 0x0a, KEY_FN)	           /* fn*/
-		MATRIX_KEY(0x06, 0x0d, KEY_LEFTMETA)	   /* Search*/
-		MATRIX_KEY(0x03, 0x00, KEY_LEFTALT)        /* Left ALT*/
+		MATRIX_KEY(0x03, 0x00, KEY_LEFTMETA)	   /* Search*/
+		MATRIX_KEY(0x06, 0x0d, KEY_LEFTALT)        /* Left ALT*/
 		MATRIX_KEY(0x03, 0x0e, KEY_RIGHTCTRL)      /* Right Control*/
 	>;
 };
