CHROMIUM: arm64: dts: mt8186: Modify keyboard layout for chinchou
Remove FN and Super Insert key.

BUG=b:313115618, b:313149578
TEST=emerge-corsola sys-kernel/chromeos-kernel-5_15

Change-Id: I78b6c09b0cf36c256c7c4e1c82fc14304fd53349
Signed-off-by: xiazhengqiao <xiazhengqiao@huaqin.corp-partner.google.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/5061351
Commit-Queue: Hsin-Yi Wang <hsinyi@chromium.org>
Reviewed-by: Haikun Zhou <zhouhaikun5@huaqin.corp-partner.google.com>
Reviewed-by: Hsin-Yi Wang <hsinyi@chromium.org>

--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou.dtsi
@@ -199,6 +199,21 @@
 &keyboard_controller {
 	keypad,num-columns = <15>;
 
+	function-row-physmap = <
+		MATRIX_KEY(0x00, 0x02, 0)        /* T1 */
+		MATRIX_KEY(0x03, 0x02, 0)        /* T2 */
+		MATRIX_KEY(0x02, 0x02, 0)        /* T3 */
+		MATRIX_KEY(0x01, 0x02, 0)        /* T4 */
+		MATRIX_KEY(0x03, 0x04, 0)        /* T5 */
+		MATRIX_KEY(0x02, 0x04, 0)        /* T6 */
+		MATRIX_KEY(0x01, 0x04, 0)        /* T7 */
+		MATRIX_KEY(0x02, 0x09, 0)        /* T8 */
+		MATRIX_KEY(0x01, 0x09, 0)        /* T9 */
+		MATRIX_KEY(0x00, 0x04, 0)        /* T10 */
+		MATRIX_KEY(0x00, 0x01, 0)        /* T11 */
+		MATRIX_KEY(0x01, 0x05, 0)        /* T12 */
+	>;
+
 	linux,keymap = <
 		CROS_STD_MAIN_KEYMAP
 		MATRIX_KEY(0x00, 0x02, KEY_BACK)           /* T1 */
@@ -212,14 +227,12 @@
 		MATRIX_KEY(0x01, 0x09, KEY_VOLUMEDOWN)	   /* T9 */
 		MATRIX_KEY(0x00, 0x04, KEY_VOLUMEUP)	   /* T10 */
 		MATRIX_KEY(0x00, 0x01, KEY_MICMUTE)        /* T11 */
-		MATRIX_KEY(0x01, 0x05, KEY_F12)	           /* T12 */
+		MATRIX_KEY(0x01, 0x05, KEY_CONTROLPANEL)   /* T12 */
 		MATRIX_KEY(0x03, 0x05, KEY_PREVIOUSSONG)   /* T13 */
 		MATRIX_KEY(0x00, 0x09, KEY_PLAYPAUSE)	   /* T14 */
 		MATRIX_KEY(0x00, 0x0b, KEY_NEXTSONG)	   /* T15 */
-		MATRIX_KEY(0x06, 0x00, KEY_INSERT)         /* Insert */
-		MATRIX_KEY(0x01, 0x0e, KEY_LEFTCTRL)	   /* Left Control*/
-		MATRIX_KEY(0x04, 0x0a, KEY_FN)	           /* fn*/
 		MATRIX_KEY(0x03, 0x00, KEY_LEFTMETA)	   /* Search*/
+		MATRIX_KEY(0x01, 0x0e, KEY_LEFTCTRL)	   /* Left Control*/
 		MATRIX_KEY(0x06, 0x0d, KEY_LEFTALT)        /* Left ALT*/
 		MATRIX_KEY(0x03, 0x0e, KEY_RIGHTCTRL)      /* Right Control*/
 	>;
