--- a/kernel/sched/Makefile
+++ b/kernel/sched/Makefile
@@ -23,7 +23,14 @@ CFLAGS_core.o := $(PROFILING) -fno-omit-frame-pointer
 endif
 
 obj-y += core.o loadavg.o clock.o cputime.o
-obj-y += idle.o fair.o rt.o deadline.o
+obj-y += idle.o rt.o deadline.o
+
+ifdef CONFIG_SCHED_EEVDF
+obj-y += fair_eevdf.o
+else
+obj-y += fair.o
+endif
+
 obj-y += wait.o wait_bit.o swait.o completion.o
 
 obj-$(CONFIG_SMP) += cpupri.o cpudeadline.o topology.o stop_task.o pelt.o
