--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-starmie-sku1.dts
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-starmie-sku1.dts
@@ -10,9 +10,9 @@
 #include "mt8186-corsola-starmie.dtsi"
 
 / {
-	model = "Google Starmie sku1/unprovisioned board";
+	model = "Google Starmie sku1/4/unprovisioned board";
 	compatible = "google,starmie-sku1", "google,starmie-sku2147483642",
-		     "google,starmie", "mediatek,mt8186";
+		     "google,starmie-sku4", "google,starmie", "mediatek,mt8186";
 };
 
 &panel {
