BACKPORT: FROMLIST: arm64: dts: mediatek: Add socinfo efuses to MT8173/83/96/92/95 SoCs
Add efuse nodes for socinfo retrieval for MT8173, MT8183, MT8186,
MT8192 and MT8195.

Signed-off-by: William-tw Lin <william-tw.lin@mediatek.com>
Reviewed-by: AngeloGioacchino Del Regno <angelogioacchino.delregno@collabora.com>
(am from https://patchwork.kernel.org/patch/13503087/)
(also found at https://lore.kernel.org/r/20231222080739.21706-2-william-tw.lin@mediatek.com)

Conflicts:
   arch/arm64/boot/dts/mediatek/mt8173.dtsi
   arch/arm64/boot/dts/mediatek/mt8192.dtsi
   arch/arm64/boot/dts/mediatek/mt8195.dtsi

BUG=b:271791623
BUG=b:293929346
TEST=build kernel

Change-Id: Iff7acb22303715d27d24fb7f9f810925f449d481
Signed-off-by: Jason Chen <jason-ch.chen@mediatek.corp-partner.google.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/5179726
Commit-Queue: Fei Shao <fshao@chromium.org>
Reviewed-by: Fei Shao <fshao@chromium.org>

--- a/arch/arm64/boot/dts/mediatek/mt8173.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt8173.dtsi
@@ -606,6 +606,15 @@
 			svs_calibration: calib@100 {
 				reg = <0x100 0x8c>;
 			};
+
+			socinfo-data1@40 {
+				reg = <0x040 0x4>;
+			};
+
+			socinfo-data2@44 {
+				reg = <0x044 0x4>;
+			};
+
 			thermal_calibration: calib@528 {
 				reg = <0x528 0xc>;
 			};
