--- a/chromeos/config/chromeos/arm64/chromiumos-mediatek.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-mediatek.flavour.config
@@ -99,9 +99,9 @@ CONFIG_SND_SOC_MT8173_RT5650_RT5676=m
 CONFIG_SND_SOC_MT8183=y
 CONFIG_SND_SOC_MT8183_DA7219_MAX98357A=y
 CONFIG_SND_SOC_MT8183_MT6358_TS3A227E_MAX98357A=y
-CONFIG_SND_SOC_MT8186=y
-CONFIG_SND_SOC_MT8186_MT6366_DA7219_MAX98357=y
-CONFIG_SND_SOC_MT8186_MT6366_RT1019_RT5682S=y
+CONFIG_SND_SOC_MT8186=m
+CONFIG_SND_SOC_MT8186_MT6366_DA7219_MAX98357=m
+CONFIG_SND_SOC_MT8186_MT6366_RT1019_RT5682S=m
 CONFIG_SND_SOC_MT8192=y
 CONFIG_SND_SOC_MT8192_MT6359_RT1015_RT5682=y
 CONFIG_SND_SOC_SOF_MT8186=m
