CHROMIUM: arm64: dts: mt8186: Modify timing of touchscreen
ILI2901 requires reset to pull down time greater than 10ms,
so don't use "hid-over-i2c" driver.
The ILI2901 requires pulling down tchscr_report_disable during
sleep to reduce power consumption, using vccio-supply to control
this pin.

BUG=b:315223616
TEST=build kernel and test timing

Change-Id: Icd52fc02720096b88722c3ef0c13af1d3bb41d19
Signed-off-by: Zhengqiao Xia <xiazhengqiao@huaqin.corp-partner.google.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/5138637
Reviewed-by: Hsin-Yi Wang <hsinyi@chromium.org>
Commit-Queue: Hsin-Yi Wang <hsinyi@chromium.org>
Reviewed-by: Haikun Zhou <zhouhaikun5@huaqin.corp-partner.google.com>

--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou.dtsi
@@ -85,6 +85,16 @@
 						120000 54
 						125000 47>;
 	};
+
+	pp1800_tchscr_report_disable: regulator-pp1800-tchscr-report-disable {
+		compatible = "regulator-fixed";
+		regulator-name = "pp1800_tchscr_report_disable";
+		pinctrl-names = "default";
+		enable-active-low;
+		regulator-boot-on;
+		pinctrl-0 = <&touch_pin_report>;
+		gpio = <&pio 37 GPIO_ACTIVE_LOW>;
+	};
 };
 
 &dsi_out {
@@ -317,5 +327,12 @@
 		polling-delay = <1000>; /* milliseconds */
 		polling-delay-passive = <0>; /* milliseconds */
 		thermal-sensors = <&tboard_thermistor2>;
+	};
+};
+
+&pio {
+	touch_pin_report: pin-report {
+		pinmux = <PINMUX_GPIO37__FUNC_GPIO37>;
+		output-low;
 	};
 };
