--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou-sku16.dts
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou-sku16.dts
@@ -16,13 +16,12 @@
 	i2c-scl-internal-delay-ns = <10000>;
 
 	touchscreen: touchscreen@41 {
-		compatible = "hid-over-i2c";
+		compatible = "ilitek,ili2901";
 		reg = <0x41>;
 		interrupts-extended = <&pio 12 IRQ_TYPE_LEVEL_LOW>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&touchscreen_pins>;
-		post-power-on-delay-ms = <10>;
-		hid-descr-addr = <0x0001>;
-		vdd-supply = <&pp3300_s3>;
+		reset-gpios = <&pio 60 GPIO_ACTIVE_LOW>;
+		vccio-supply = <&pp1800_tchscr_report_disable>;
 	};
 };
