CHROMIUM: arm64: dts: mt8186: Modify keyboard value for 'GB' and 'JP'
Compared to the standard Google keyboard, the coordinates of
the matrix values 42 contained in GB and JP are (0x06, 0x0a)
instead of (0x04, 0x0a).

BUG=b:309427020
TEST=build kernel and test keyboard value

Change-Id: I37934cdd214448fd89ffa22e6a6b158ca23a1efe
Signed-off-by: Zhengqiao Xia <xiazhengqiao@huaqin.corp-partner.google.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/5175083
Reviewed-by: Hsin-Yi Wang <hsinyi@chromium.org>
Commit-Queue: Hsin-Yi Wang <hsinyi@chromium.org>
Reviewed-by: Haikun Zhou <zhouhaikun5@huaqin.corp-partner.google.com>

--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou.dtsi
@@ -313,6 +313,7 @@
 		MATRIX_KEY(0x01, 0x0e, KEY_LEFTCTRL)	   /* Left Control*/
 		MATRIX_KEY(0x06, 0x0d, KEY_LEFTALT)        /* Left ALT*/
 		MATRIX_KEY(0x03, 0x0e, KEY_RIGHTCTRL)      /* Right Control*/
+		MATRIX_KEY(0x06, 0x0a, KEY_BACKSLASH)      /* BACKSLASH*/
 	>;
 };
 
