CHROMIUM: arm64: dts: mt8186: Add new sku for DVT phase
0x00002: for chinchou, front camera 1080p, no touch
0x00012: for chinchou360, front camera 1080p, no touch
0x00013: for chinchou360, front camera 720p, no touch

BUG=b:317839623
TEST=build config.star and deploy

Change-Id: I1cd1ef99f40a1196c132011c50d4872a195e5866
Signed-off-by: Zhengqiao Xia <xiazhengqiao@huaqin.corp-partner.google.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/5180272
Reviewed-by: Haikun Zhou <zhouhaikun5@huaqin.corp-partner.google.com>
Reviewed-by: Hsin-Yi Wang <hsinyi@chromium.org>
Commit-Queue: Hsin-Yi Wang <hsinyi@chromium.org>

--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou-sku0.dts
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou-sku0.dts
@@ -8,8 +8,8 @@
 
 / {
 	model = "Google chinchou sku0 board";
-	compatible = "google,chinchou-sku0","google,chinchou",
-			"mediatek,mt8186";
+	compatible = "google,chinchou-sku0", "google,chinchou-sku2",
+			"google,chinchou", "mediatek,mt8186";
 };
 
 &gpio_keys {
