--- a/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou-sku16.dts
+++ b/arch/arm64/boot/dts/mediatek/mt8186-corsola-chinchou-sku16.dts
@@ -8,7 +8,8 @@
 
 / {
 	model = "Google chinchou sku16/sku2147483647 board";
-	compatible = "google,chinchou-sku16", "google,chinchou-sku2147483647",
+	compatible = "google,chinchou-sku16", "google,chinchou-sku18",
+			"google,chinchou-sku19", "google,chinchou-sku2147483647",
 			"mediatek,mt8186";
 };
 
