FIXUP: BACKPORT: FROMLIST: soc: mediatek: mtk-socinfo: Add driver for getting chip information
The config symbol for the NVMEM devices on mediatek devices was renamed in commit 28fc7c986f01 ("nvmem: prefix all symbols with NVMEM_"). Remove the NVMEM_ prefix to make it compatible with previous kernel versions.

Signed-off-by: Kiwi Liu <kiwi.liu@mediatek.com>

BUG=b:271791623
BUG=b:293929346
TEST=test device ok

Change-Id: Ib5a37edbdb743bcc1749e8ed661c5c2429688e1d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/5186696
Reviewed-by: Fei Shao <fshao@chromium.org>
Reviewed-by: jason-ch chen <jason-ch.chen@mediatek.corp-partner.google.com>
Reviewed-by: Kiwi Liu <kiwi.liu@mediatek.corp-partner.google.com>
Tested-by: Kiwi Liu <kiwi.liu@mediatek.corp-partner.google.com>
Commit-Queue: Fei Shao <fshao@chromium.org>

--- a/drivers/soc/mediatek/Kconfig
+++ b/drivers/soc/mediatek/Kconfig
@@ -86,7 +86,7 @@ config MTK_SVS
 config MTK_SOCINFO
 	tristate "MediaTek SoC Information"
 	default y
-	depends on NVMEM_MTK_EFUSE
+	depends on MTK_EFUSE
 	help
 	  The MediaTek SoC Information (mtk-socinfo) driver provides
 	  information about the SoC to the userspace including the
