CHROMIUM: sched/eevdf: Add dependency on !COMPILE_TEST
Building the eevdf code results in lots of warnings and errors during
build tests, such as missing prototypes, address space mismatches,
missing structure members with certain onfigurations, and other problems.

Disable build tests for SCHED_EEVDF to avoid polluting test logs.

BUG=b:308209790
TEST=Run "make allmodconfig" and similar test builds
UPSTREAM-TASK=b:324600165

Change-Id: Ic2d3ac99795400f9990a13e5a139e24e827155cc
Disallow-Recycled-Builds: test-failures
Signed-off-by: Guenter Roeck <groeck@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/5310527
Reviewed-by: Aashish Sharma <shraash@google.com>
Reviewed-by: Youssef Esmat <youssefesmat@chromium.org>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -2411,6 +2411,7 @@ config ARCH_HAS_SYSCALL_WRAPPER
 
 config SCHED_EEVDF
 	bool "EEVDF cpu scheduler"
+	depends on !COMPILE_TEST
 	help
 	  Enable dynamic switching between EEVDF and CFS.
 	default y
