--- a/chromeos/config/chromeos/arm64/chromiumos-rockchip64.flavour.config
+++ b/chromeos/config/chromeos/arm64/chromiumos-rockchip64.flavour.config
@@ -92,6 +92,8 @@ CONFIG_STAGING_MEDIA=y
 CONFIG_STMMAC_ETH=m
 CONFIG_TCG_TIS_I2C_INFINEON=y
 CONFIG_THERMAL=y
+CONFIG_THERMAL_DEFAULT_GOV_POWER_ALLOCATOR=y
+CONFIG_THERMAL_GOV_STEP_WISE=y
 CONFIG_TMPFS=y
 CONFIG_USB_CONFIGFS=m
 CONFIG_USB_CONFIGFS_F_FS=y
